Fix projects page overlapping (#1112)

--- a/app/assets/stylesheets/logixRelease.scss
+++ b/app/assets/stylesheets/logixRelease.scss
@@ -114,16 +114,6 @@ a.btn.btn-outline-danger {
   padding: 10px 0 25px;
 }
 
-.btn-favourite {
-  display: inline;
-  float: right;
-}
-
-.username {
-  display: inline;
-  margin-left: 10px;
-}
-
 .card-userprojects {
   border: 2px solid $green;
   border-radius: 0;
